--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <a href="#Schedule">Schedule</a>
             <a href="#Location">Location</a>
             <a href="#FAQ">FAQ</a>
-            <a href="#xhtml">HTML vs XHTML</a>
+            <a href="#Code">Tech Demo</a>
         </nav>
 
         <!-- MAIN LAYOUT AREA -->
