--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     </p>
                 </article>
                 <!-- Computercode tags -->
-                <article id="code" class="card">
+                <article id="Code" class="card">
                     <h2>Tech Demo & Developer Notes</h2>
                     <strong>Sample Command ( Using < pre > and < code >)</strong>
 
