--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <li>Day 2 - Coding Hackathon &#128187</li>
                         <li>Day 3 - Robotics & IoT Exhibition &#129302</li>
                         <li>Day 4 - Cybersecurity Awareness Sessions</li>
-                        <li>Day 5 - Project Showcare & Awarding Ceremony</li>
+                        <li>Day 5 - Project Showcare & Awarding Ceremony &#127942</li>
                     </ul>
                 </article>
 
