--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@
                         <Strong>3. Is there a registration fee?</Strong><br>
                         No, all SMCC-CCIS Week 2025 Activities are free of charge.<br>
                     </p>
+                    <p><Strong>1. Is the event open for all students?</Strong><br>
+                        Yes, the event is open to all departments and year levels.<br>
+                        <Strong>2. Do I need to register</Strong><br>
+                        Registration is required for competitions and workshops.<br>
+                        <Strong>3. Is there a registration fee?</Strong><br>
+                        No, all SMCC-CCIS Week 2025 Activities are free of charge.<br></p>
                 </article>
                 <!-- Computercode tags -->
                 <article id="Code" class="card">
